# LVRS-trading-journal

./: .gitignore  LVRS Trading Journal.dc.html  README.md  xlsx-io.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: .tauriignore  LVRS Trading Journal.dc.html  index.html
